--- a/class04 R Markdown.Rmd
+++ b/class04 R Markdown.Rmd
@@ -1,6 +1,9 @@
 ---
+#YAML header (markup language)
 title: "Class04 R Markdown"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
