--- a/class04 R Markdown.Rmd
+++ b/class04 R Markdown.Rmd
@@ -4,27 +4,26 @@ output:
   html_document: 
     keep_md: yes
 ---
+# This is my new R Markdown file
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+## This is a my new text file.
+
+  * It's so much fun
+  * Is it really though?
+  * fact the first: ctrl+alt+i = insert code chunk
+  * fact the second: can change the figure height/width in the chunk header section
+
+```{r chunk the first}
+fun_seq <- rnorm(100,100,2)
+fun_seq2 <- rnorm(100,200,2)
+plot(fun_seq, fun_seq2)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r chunk the second}
+summary (fun_seq)
+summary (fun_seq2)
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
