--- a/class04 R Markdown.Rmd
+++ b/class04 R Markdown.Rmd
@@ -10,6 +10,7 @@ output:
 
   * It's so much fun
   * Is it really though?
+  * This would have been super helpful for my Honours Thesis.
   * fact the first: ctrl+alt+i = insert code chunk
   * fact the second: can change the figure height/width in the chunk header section
 
